# OOP-Board-Game

./: .gitignore  README.md  myProgram.out
source/: CMakeLists.txt  Cartes.xml  PROBLEMES.md  ProjetLO21.pro  carte.cpp  carte.h  carte.hpp  controller.cpp  controller.hpp  espacejeux.cpp  espacejeux.hpp  font.qrc  jetons.cpp  jetons.hpp  joueur.cpp  joueur.hpp  main  main.cpp  partie.cpp  partie.hpp  qrc_font.cpp  splendor.cpp  splendor.hpp  strategy.cpp  strategy.hpp
source/Data/: query.sql
source/UML/: UML-Joueurs.puml  UML-V1.5.plantuml  UML-V1.plantuml  UML-groupe-Carte  UML-partie.puml  UML_V1.plantuml  UML_VO.5.plantuml  brouillonUML.plantuml  jetons.plantuml
source/back-end/: carte.cpp  carte.hpp  controller.cpp  controller.hpp  controller_qt.cpp  controller_qt.hpp  espacejeux.cpp  espacejeux.hpp  exception.hpp  jetons.cpp  jetons.hpp  joueur.cpp  joueur.hpp  partie.cpp  partie.hpp  strategy.cpp  strategy.hpp
source/data/: data_carte.sqlite  save.sql  save.sqlite  score.sql  score.sqlite
source/data_cartes/: Cartes.xml  Nobles.xml
source/interface/: Thumbs.db
source/interface/code/: pageBibliotheque.cpp  pageBibliotheque.h  pageCreation.cpp  pageCreation.h  pageJeu.cpp  pageJeu.h  pageJeu.h.autosave  pageJoueur.cpp  pageJoueur.h  pageMenuPrincipal.cpp  pageMenuPrincipal.h  pagePrincipale.cpp  pagePrincipale.h  pageSauvegarde.cpp  pageSauvegarde.h  popUp.cpp  popUp.h  source.cpp  source2.cpp  test.h  toutesPages.cpp  toutesPages.h  vueCarte.cpp  vueCarte.h  (+6 more)
source/pugixml/: pugixml.cpp  pugixml.hpp
source/sqlite/: shell.c  sqlite3.h  sqlite3ext.h
(+43 files in other folders)
